fix margin spacing of results images

--- a/app/public/assets/style.css
+++ b/app/public/assets/style.css
@@ -146,11 +146,15 @@ RESULTS PAGE
 }
 
 #carousel-example-generic {
-	margin-bottom: 20px;
+	margin: 20px 0;
 }
 
 #more-info {
 	margin-bottom: 50px;
+}
+
+.results-title {
+	margin-top: 25px;
 }
 
 
